src-content/style.scss
.__stutter {
  display: block;
  position: relative;
  height: 50px;
  margin: 15px 0;
  width: 100%;
  overflow: hidden;
  z-index: 999999999;
  background: black;
  color: white;
  font-family: arial;
  font-size: 30px;
  text-align: center;
  top: 0;
  border-radius: 15px;

  .__stutter_text {
    position: relative;
    padding-top: 8px;

    .__stutter_left {
      display: block;
      text-align: right;
      position: absolute;
      right: 50%;
    }

    .__stutter_center {
      color: #f5f;
    }

    .__stutter_right {
      display: block;
      text-align: left;
      position: absolute;
      left: 50%;
    }

    .__stutter_close {
      display: block;
      text-align: right;
      position: absolute;
      right: 15px;
      cursor: pointer;
      user-select: none;
    }
  }
}

